# Ordering

./: .gitignore  CMakeLists.txt  README.md  adminOrder.c  adminOrder.h  admin_menu.c  color.h  customer_menu.c  dish.c  dish.h  dish_info.txt  main  main.c  main_menu.h  manageTable.c  order.c  order.h  order_info.c  order_info.h  order_info.txt  payment.c  payment.h  process_test.c  program  receipt.c  receipt.h  receipt.txt  receipt_1.txt  receipt_11.txt  receipt_16.txt  receipt_16_2024-03-22_16:01:15.txt  receipt_1_2024-03-29_00:16:04.txt  receipt_20.txt  receipt_2_2024-03-29_00_32_58.txt  receipt_46.txt  receipt_5_2024-04-01_15_56_16.txt  receipt_6.txt  receipt_7.txt  receipt_88.txt  receipt_98.txt  (+17 more)
.github/workflows/: build.yml
example_data/: dish_info.txt  order_info.txt
output/: main
output/main.dSYM/Contents/Resources/DWARF/: main
output/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
